--- a/project1.ipynb
+++ b/project1.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Plot US Stamp Prices Over Time"
+        "# Project 1"
       ],
       "metadata": {
         "id": "ZxTGfDu6Vebh"
